--- a/404.html
+++ b/404.html
@@ -14,14 +14,14 @@
     <link rel="icon" href="assets/img/home-favicon.ico" />
    
     <!--User Way-->
-    <!--<script src="https://cdn.userway.org/widget.js" data-account="FfyPNo0Rq8"></script>-->
+    <script src="https://cdn.userway.org/widget.js" data-account="f1iw7hGoaj"></script>
     <!--Iconos FA-->
-    <script src="https://kit.fontawesome.com/1ab87fe933.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/eaa08b9c67.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <a href="index.html">
-        <img src="assets/img/logo2.png" class="img-error-center" alt="logo del osfags" title="Órgano Superior de Fiscalización del Estado de Aguascalientes" id="img-logo3"/> 
+        <img src="assets/img/logo2.png" alt="logo del osfags" title="Órgano Superior de Fiscalización del Estado de Aguascalientes" id="img-logo3"/> 
       </a>
       <hr />
       <br />
@@ -31,7 +31,7 @@
         <div class="col-md-8">
             <div class="alert alert-warning" role="alert">
             
-                <h4 class="card-title" style="text-align: center; font-size: 25px; font-weight: bold;">Error 404</h4> 
+                <h4 class="card-title" style="text-align: center; font-size: 25px;">Error 404</h4> 
                   <h3 class="card-title" style="text-align: center; font-size: 20px;">Página no encontrada</h3> <br>
                       <div class="xmark">
                         <i class="fa-solid fa-question"></i>
@@ -110,7 +110,7 @@
 
         <div class="col-lg-4 col-md-12">
           <main class="main-img-footer">
-            <img src="assets/img/logoblanco.png" alt="Órgano Superior de Fiscalización del Estado de Aguascalientes"
+            <img src="assets/img/logoOsFAGSBlanco_convert.png" alt="Órgano Superior de Fiscalización del Estado de Aguascalientes"
             title="Órgano Superior de Fiscalización del Estado de Aguascalientes" id="img-logo4"/>
           </main>
           
