--- a/transparencia-y-proteccion/otras-obligaciones.html
+++ b/transparencia-y-proteccion/otras-obligaciones.html
@@ -9,43 +9,90 @@
     <link rel="stylesheet" href="../assets/css/tabs2.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/medias.css">
+    <link rel="stylesheet" href="../assets/css/menu.css">
     <link rel="icon" href="../assets/img/home-favicon.ico">
 
     <!--User Way-->
-    <!--<script src="https://cdn.userway.org/widget.js" data-account="FfyPNo0Rq8"></script>-->
+    <script src="https://cdn.userway.org/widget.js" data-account="f1iw7hGoaj"></script>
     <!--Iconos FA-->
-    <script src="https://kit.fontawesome.com/1ab87fe933.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/eaa08b9c67.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
   <div class="row">
     <div class="col-md-12">
+      <div class="navegacion-menu ">
         <ul class="nav-back-logo">
-            <li class="nav-item-back">
-                <a title="Regresar" id="letrav" class="btn" href="javascript: window.history.back();" role="button">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </a>
-            </li>
-            <li class="nav-item-logo" style="text-align: center">
-                <a href="../">
-                    <img src="../assets/img/logo_osfags.png" id="img-logo3" alt="Órgano Superior de Fiscalización del Estado de Aguascalientes" title="Inicio">
-                </a>
-            </li>
-        </ul>
+          <li class="nav-item-back">
+              
+          </li><br><br><br>
+          <li class="nav-item-logo" style="text-align: center">
+              <a href="../index.html">
+                  <img src="../assets/img/logo2.png" alt="Órgano Superior de Fiscalización del Estado de Aguascalientes" title="Inicio" width="190px">
+              </a>
+          </li>
+      </ul>
+
+      <ul class="nav nav-tabs nav-tabs-menu" id="menu" role="tablist" style="text-align: center;">
+
+        <li class="nav-item nav-item-menu">
+          <a class="nav-link nav-link-menu" href="../index.html" role="tab" >Inicio</a>
+        </li>
+
+        <li class="nav-item dropdown nav-item-menu">
+          <a class="nav-link dropdown-toggle nav-link-dropdown-toggle-menu active" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Transparencia
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item dropdown-item-submenu" href="transparencia.html">Obligaciones de Transparencia</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" href="avisos.html">Avisos de Privacidad</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" href="sevac.html">SEVAC</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" href="disciplina-financiera.html">Disciplina Financiera</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" href="avance.html">Avance de Gestión Financiera</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown nav-item-menu">
+          <a class="nav-link dropdown-toggle nav-link-dropdown-toggle-menu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Programas
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item dropdown-item-submenu" target="_blank" href="https://osfags.gob.mx/Public/bk1FRRJlrE3MdeR.pdf">Programa de Actividades 2024</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" target="_blank" href="http://osfags.gob.mx/Public/XulrIRUvXTOPone.pdf">Plan de Auditorías Cuenta Pública 2022</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" target="_blank" href="http://osfags.gob.mx/Public/d5KeTCBheUUv4kr.pdf">Plan Anual de Adquisiciones, Arrendamientos y Servicios</a></li>
+            <li><a class="dropdown-item dropdown-item-submenu" href="../programas-y-servicios/evaluacion.html">Sistema de Evaluación del Desempeño del Programa Presupuestario</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item nav-item-menu">
+          <a class="nav-link nav-link-menu" href="../denuncia/index.html" role="tab" >Denuncia</a>
+        </li>
+
+        <li class="nav-item nav-item-menu">
+          <a class="nav-link nav-link-menu" href="../contacto/index.html" role="tab" >Contacto</a>
+        </li>
+
+      </ul>
+
+      </div>
     </div>
   </div>
 
-      <div class="container">
+      <div class="container"><hr>
         <h2>Otras Obligaciones de Transparencia</h2>
         <div class="row col-md-12" style="text-align: center;"><b>Para más información, dar click en cualquier botón</b></div>
       <div class="row">
-        <div class="col-md-6"><br><a href="sevac.html" id="cont1" style="background-color: #147568; color: #fff; ">
+        <div class="col-md-4"><br><a href="sevac.html" id="cont1" style="background-color: #147568; color: #fff; ">
           <h3 style="color: #fff; font-size: 23px; text-align: center; user-select: none;">Sistema de Evaluación de la Armonización Contable (SEVAC)</h3>
         </a></div>
 
-        <div class="col-md-6"><br><a href="disciplina-financiera.html" id="cont1" style="background-color: #147568; color: #fff;">
+        <div class="col-md-4"><br><a href="disciplina-financiera.html" id="cont1" style="background-color: #147568; color: #fff;">
             <h3 style="color: #fff; font-size: 23px; text-align: center; user-select: none;">Disciplina Financiera</h3>
         </a></div> 
+
+        <div class="col-md-4"><br><a href="avance.html" id="cont1" style="background-color: #147568; color: #fff;">
+          <h3 style="color: #fff; font-size: 23px; text-align: center; user-select: none;">Avance de Gestión Financiera</h3>
+      </a></div> 
       </div>
 
       </div>
@@ -108,6 +155,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 
 
